# gradients

./: Cargo.toml  README.md
examples/: mnist.rs
gradients/: Cargo.toml
gradients-derive/: Cargo.toml  README.md
gradients-derive/src/: lib.rs
gradients/benches/: lin_forward.rs
gradients/examples/: linear_config.rs  linear_reg.rs  mnist.rs  polynomial_reg.rs  sine.rs  test_sine.rs
gradients/src/: accuracy.rs  batch.rs  layers.rs  lib.rs  onehot.rs  random.rs
gradients/src/layers/: activations.rs  conv2d.rs  linear.rs  mod.rs
gradients/src/layers/linear/: config.rs  init.rs  l2_reg.rs
gradients/src/ml/: lin_reg.rs  mod.rs  poly_reg.rs
gradients/src/opt/: adam.rs  mod.rs  sgd.rs
gradients/tests/: accuracy.rs  attribute.rs  batch_size.rs  berries.rs  conv.rs  conv_net.rs  derive.rs  l2_reg_loss.rs  large_xor.rs  layer.rs  layer_config.rs  lin_reg.rs  mod.rs  network.rs  onehot.rs  opt.rs  poly_reg.rs  stack-alloc-structure.rs  test_mnist.rs  test_new_linear.rs  test_sine.rs  test_sine_perf.rs
gradients/tests/regression/: lin_reg.rs  mod.rs  poly_reg.rs  poly_vs_lin_reg.rs
gradients/tests2/: accuracy.rs  conv.rs  derive.rs  network.rs  test_sine.rs
gradients/tests2/regression/: lin_reg.rs  mod.rs
src/: layers.rs  lib.rs  onehot.rs  random.rs
src/opt/: adam.rs  mod.rs
tests/: deriv.rs  derive.rs  network.rs
