[package]
name = "gradients-derive"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Derive crate for gradients"
repository = "https://github.com/elftausend/gradients"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"