[package]
name = "gradients"
version = "0.1.0"
edition = "2021"
categories = ["mathematics", "science", "algorithms"]
keywords = ["CUDA", "OpenCL", "machine-learning", "science", "deep-learning"]
description = "An OpenCL, CUDA and CPU based Deep Learning Library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/elftausend/gradients"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

custos = { version="0.1.4", default-features = false }
#custos = { path = "../../custos", default-features = false }
custos-math = { path = "../../custos-math", default-features = false }
#custos-math = { version="0.1.0", default-features = false }
purpur = "0.1.0"

#gradients-derive = { version = "0.1.0" }
gradients-derive = { path = "../gradients-derive" }
[features]
default = ["opencl"]
opencl = ["custos/opencl", "custos-math/opencl"]
cuda = ["custos/cuda", "custos-math/cuda"]

[dev-dependencies]
graplot = { version = "0.1.20" }
criterion = "0.3.6"

[[example]]
name = "mnist"
required-features = ["opencl"]

[[test]]
name = "derive"
required-features = ["opencl"]

[[test]]
name = "network"
required-features = ["opencl"]

[[test]]
name = "onehot"
required-features = ["opencl"]

[[bench]]
name = "lin_forward"
harness = false